--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <script
       src="https://kit.fontawesome.com/d6d4c9e8be.js"
       crossorigin="anonymous"
@@ -19,16 +19,16 @@
   </head>
   <body>
     <div class="container">
-      <header>
+      <header class="red-b">
         <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
       </header>
       <main>
         <section class="booking">
-          <div class="location">
+          <div class="booking__location">
             <i class="fas fa-map-marker-alt"></i>
             <p>Paris, Belleville</p>
           </div>
-          <div class="search-local">
+          <div class="booking__search">
             <p>Réservez le menu qui vous convient</p>
             <p>
               Découvrez les restaurants d'éxception, sélectionnés par nos soins.
