--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
   </head>
   <body>
     <div class="container">
-      <header class="red-b">
-        <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
+      <header class="">
+        <p>ohmyfood</p>
       </header>
       <main>
         <section class="booking">
@@ -29,16 +29,17 @@
             <p>Paris, Belleville</p>
           </div>
           <div class="booking__search">
-           <p>Réservez le menu qui <br>vous convient</p> 
+            <p>Réservez le menu qui <br />vous convient</p>
             <p>
-              Découvrez les restaurants d'éxception,<br> sélectionnés par nos soins.
+              Découvrez les restaurants d'éxception,<br />
+              sélectionnés par nos soins.
             </p>
             <button>Explorer nos restaurants</button>
           </div>
         </section>
         <section class="function">
           <p>Fonctionnement</p>
-          <div>
+          <div class="function__choice">
             <span>1</span>
             <div class="icone">
               <i class="fas fa-mobile-alt"></i>
@@ -46,14 +47,14 @@
             <p>Choisissez un restaurant</p>
           </div>
 
-          <div>
+          <div class="function__choice">
             <span>2</span>
             <div class="icone">
               <i class="fas fa-list-ul"></i>
             </div>
             <p>Composez votre menu</p>
           </div>
-          <div>
+          <div class="function__choice">
             <span>3</span>
             <div class="icone">
               <i class="fas fa-store"></i>
@@ -63,94 +64,97 @@
         </section>
         <section class="local">
           <p>Restaurants</p>
-          <article class="card">
-            <a href="lapalettedugout.html">
-              <div class="card-image">
-                <img
-                  src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                  alt="photo d'un plat"
-                />
-              </div>
-              <div class="card-info">
-                <div class="card-text">
-                  <p>La palette du gout</p>
-                  <p>Ménilmontant</p>
+          <div class="local__container">
+            <article class="local__container__card">
+              <a href="lapalettedugout.html">
+                <div class="local__card-image">
+                  <img
+                    src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                    alt="photo d'un plat"
+                  />
                 </div>
-                <div class="card-like">
-                  <i class="far fa-heart"></i>
+                <div class="local__card-info">
+                  <div class="local__card-info-text">
+                    <p>La palette du gout</p>
+                    <p>Ménilmontant</p>
+                  </div>
+                  <div class="local__card-info-like">
+                    <i class="far fa-heart"></i>
+                  </div>
                 </div>
-              </div>
-            </a>
-          </article>
-          <article class="card">
-            <a href="lanoteenchantee.html">
-              <div class="card-image">
-                <img
-                  src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                  alt="photo d'un plat"
-                />
-              </div>
-              <div class="card-info">
-                <div class="card-text">
-                  <p>La note enchantée</p>
-                  <p>Charonne</p>
+              </a>
+            </article>
+            <article class="local__container__card">
+              <a href="lanoteenchantee.html">
+                <div class="card-image">
+                  <img
+                    src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                    alt="photo d'un plat"
+                  />
                 </div>
-                <div class="card-like">
-                  <i class="far fa-heart"></i>
+                <div class="card-info">
+                  <div class="card-text">
+                    <p>La note enchantée</p>
+                    <p>Charonne</p>
+                  </div>
+                  <div class="card-like">
+                    <i class="far fa-heart"></i>
+                  </div>
                 </div>
-              </div>
-            </a>
-          </article>
-          <article class="card">
-            <a href="alafrancaise.html">
-              <div class="card-image">
-                <img
-                  src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                  alt="photo d'un plat"
-                />
-              </div>
-              <div class="card-info">
-                <div class="card-text">
-                  <p>A la française</p>
-                  <p>Cité Rouge</p>
+              </a>
+            </article>
+            <article class="local__container__card">
+              <a href="alafrancaise.html">
+                <div class="card-image">
+                  <img
+                    src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                    alt="photo d'un plat"
+                  />
                 </div>
-                <div class="card-like">
-                  <i class="far fa-heart"></i>
+                <div class="card-info">
+                  <div class="card-text">
+                    <p>A la française</p>
+                    <p>Cité Rouge</p>
+                  </div>
+                  <div class="card-like">
+                    <i class="far fa-heart"></i>
+                  </div>
                 </div>
-              </div>
-            </a>
-          </article>
-          <article class="card">
-            <a href="ledelicedessens.html">
-              <div class="card-image">
-                <img
-                  src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                  alt="photo d'un plat"
-                />
-              </div>
-              <div class="card-info">
-                <div class="card-text">
-                  <p>Le délice des sens</p>
-                  <p>Folie-Méricourt</p>
+              </a>
+            </article>
+            <article class="local__container__card">
+              <a href="ledelicedessens.html">
+                <div class="card-image">
+                  <img
+                    src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                    alt="photo d'un plat"
+                  />
                 </div>
-                <div class="card-like">
-                  <i class="far fa-heart"></i>
+                <div class="card-info">
+                  <div class="card-text">
+                    <p>Le délice des sens</p>
+                    <p>Folie-Méricourt</p>
+                  </div>
+                  <div class="card-like">
+                    <i class="far fa-heart"></i>
+                  </div>
                 </div>
-              </div>
-            </a>
-          </article>
+              </a>
+            </article>
+          </div>
+          
         </section>
       </main>
       <footer>
         <div class="logo-footer">
-          <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
+         <p>ohmyfood</p>
         </div>
         <div class="suggest-restaurant">
           <i class="fas fa-utensils"></i>
           <p>Proposer un restaurant</p>
         </div>
         <div class="partnership">
-        <i class="fas fa-hands-helping"></i>
+          <i class="fas fa-hands-helping"></i>
           <p>Devenir partenaire</p>
         </div>
         <p>Mentions légales</p>
