--- a/index.html
+++ b/index.html
@@ -62,92 +62,89 @@
             <p>Dégustez au restaurant</p>
           </div>
         </section>
-        <section class="local">
-          <p>Restaurants</p>
-          <div class="local__container">
-            <article class="local__container__card">
-              <a href="lapalettedugout.html">
-                <div class="local__card-image">
-                  <img
-                    src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                    alt="photo d'un plat"
-                  />
-                </div>
-                <div class="local__card-info">
-                  <div class="local__card-info-text">
+        <section class="restaurant">
+          <p class="restaurant__title">Restaurants</p>
+          <div class="cards">
+            <article class="card cards__item">
+              <a href="lapalettedugout.html" class="link card__link">
+                <img
+                  class="card__image"
+                  src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                  alt="photo d'un plat"
+                />
+                <div class="card__info">
+                  <div class="card__text">
                     <p>La palette du gout</p>
                     <p>Ménilmontant</p>
                   </div>
-                  <div class="local__card-info-like">
+                  <div class="card__like">
                     <i class="far fa-heart"></i>
                   </div>
                 </div>
               </a>
             </article>
-            <article class="local__container__card">
-              <a href="lanoteenchantee.html">
-                <div class="card-image">
-                  <img
-                    src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                    alt="photo d'un plat"
-                  />
-                </div>
-                <div class="card-info">
-                  <div class="card-text">
+            <article class="card">
+              <a href="lanoteenchantee.html" class="link card__link">
+                <img
+                  class="card__image"
+                  src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                  alt="photo d'un plat"
+                />
+
+                <div class="card__info">
+                  <div class="card__text">
                     <p>La note enchantée</p>
                     <p>Charonne</p>
                   </div>
-                  <div class="card-like">
+                  <div class="card__like">
                     <i class="far fa-heart"></i>
                   </div>
                 </div>
               </a>
             </article>
-            <article class="local__container__card">
-              <a href="alafrancaise.html">
-                <div class="card-image">
-                  <img
-                    src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                    alt="photo d'un plat"
-                  />
-                </div>
-                <div class="card-info">
-                  <div class="card-text">
+            <article class="card">
+              <a href="alafrancaise.html" class="link card__link">
+                <img
+                  class="card__image"
+                  src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                  alt="photo d'un plat"
+                />
+                <div class="card__info">
+                  <div class="card__text">
                     <p>A la française</p>
                     <p>Cité Rouge</p>
                   </div>
-                  <div class="card-like">
+                  <div class="card__like">
                     <i class="far fa-heart"></i>
                   </div>
                 </div>
               </a>
             </article>
-            <article class="local__container__card">
-              <a href="ledelicedessens.html">
-                <div class="card-image">
-                  <img
-                    src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                    alt="photo d'un plat"
-                  />
-                </div>
-                <div class="card-info">
-                  <div class="card-text">
+            <article class="card">
+              <a href="ledelicedessens.html" class="link card__link">
+                <img
+                  class="card__image"
+                  src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                  alt="photo d'un plat"
+                />
+
+                <div class="card__info">
+                  <div class="card__text">
                     <p>Le délice des sens</p>
                     <p>Folie-Méricourt</p>
                   </div>
-                  <div class="card-like">
+                  <div class="card__like">
                     <i class="far fa-heart"></i>
                   </div>
                 </div>
               </a>
             </article>
           </div>
-          
         </section>
       </main>
       <footer>
         <div class="logo-footer">
-         <p>ohmyfood</p>
+          <p>ohmyfood</p>
         </div>
         <div class="suggest-restaurant">
           <i class="fas fa-utensils"></i>
