--- a/index.html
+++ b/index.html
@@ -19,143 +19,139 @@
   </head>
   <body>
     <div class="container">
-      <header class="">
+      <header class="header">
         <p>ohmyfood</p>
       </header>
-      <main>
+      <main class="main">
         <section class="booking">
-          <div class="booking__location">
-            <i class="fas fa-map-marker-alt"></i>
-            <p>Paris, Belleville</p>
-          </div>
-          <div class="booking__search">
-            <p>Réservez le menu qui <br />vous convient</p>
-            <p>
-              Découvrez les restaurants d'éxception,<br />
-              sélectionnés par nos soins.
-            </p>
-            <button>Explorer nos restaurants</button>
-          </div>
-        </section>
-        <section class="function">
-          <p>Fonctionnement</p>
-          <div class="function__choice">
-            <span>1</span>
-            <div class="icone">
-              <i class="fas fa-mobile-alt"></i>
+          <div class="booking booking--dark">
+            <div class="booking__map">
+              <div class="map">
+                <i class="fas fa-map-marker-alt map__icon"></i>
+                <p class="map__text">Paris, Belleville</p>
+              </div>
             </div>
-            <p>Choisissez un restaurant</p>
           </div>
 
-          <div class="function__choice">
-            <span>2</span>
-            <div class="icone">
-              <i class="fas fa-list-ul"></i>
+          <div class="booking__search">
+            <div class="search">
+              <h1 class="search__heading">
+                Réservez le menu qui vous convient
+              </h1>
+              <p class="search__text">
+                Découvrez des restaurants d'exception, sélectionnés par nos
+                soins.
+              </p>
+              <button class="search__button">Explorez nos restaurants</button>
             </div>
-            <p>Composez votre menu</p>
           </div>
-          <div class="function__choice">
-            <span>3</span>
-            <div class="icone">
-              <i class="fas fa-store"></i>
-            </div>
-            <p>Dégustez au restaurant</p>
+        </section>
+        <section class="check-in">
+          <h1 class="check-in__heading">Fonctionnement</h1>
+          <div class="check-in__box">
+            <span class="check-in__order">1</span>
+            <i class="fas fa-mobile-alt check-in__icon"></i>
+            <p class="check-in__text">Choisissez un restaurant</p>
+          </div>
+          <div class="check-in__box">
+            <span class="check-in__order">2</span>
+            <i class="fas fa-list-ul check-in__icon"></i>
+            <p class="check-in__text">Composez votre menu</p>
+          </div>
+          <div class="check-in__box">
+            <span class="check-in__order">3</span>
+            <i class="fas fa-store check-in__icon"></i>
+            <p class="check-in__text">Dégustez au restaurant</p>
           </div>
         </section>
         <section class="restaurant">
-          <p class="restaurant__title">Restaurants</p>
           <div class="cards">
-            <article class="card cards__item">
-              <a href="lapalettedugout.html" class="link card__link">
-                <img
-                  class="card__image"
-                  src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                  alt="photo d'un plat"
-                />
-                <div class="card__info">
-                  <div class="card__text">
-                    <p>La palette du gout</p>
-                    <p>Ménilmontant</p>
+            <h1 class="cards__heading">Restaurants</h1>
+            <div class="cards__item">
+              <article class="card">
+                <a href="lapalettedugout.html" class="card__link">
+                  <img
+                    src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                    alt=""
+                    class="card__image"
+                  />
+                  <div class="card__content">
+                    <h2 class="card__heading">La palette du goût</h2>
+                    <p class="card__text">Ménilmontant</p>
+                    <i class="far fa-heart card__icon"></i>
                   </div>
-                  <div class="card__like">
-                    <i class="far fa-heart"></i>
+                </a>
+              </article>
+            </div>
+            <div class="cards__item">
+              <article class="card">
+                <a href="lanoteenchantee.html" class="card__link">
+                  <img
+                    src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                    alt=""
+                    class="card__image"
+                  />
+                  <div class="card__content">
+                    <h2 class="card__heading">La note enchantée</h2>
+                    <p class="card__text">Charonne</p>
+                    <i class="far fa-heart card__icon"></i>
                   </div>
-                </div>
-              </a>
-            </article>
-            <article class="card">
-              <a href="lanoteenchantee.html" class="link card__link">
-                <img
-                  class="card__image"
-                  src="images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
-                  alt="photo d'un plat"
-                />
-
-                <div class="card__info">
-                  <div class="card__text">
-                    <p>La note enchantée</p>
-                    <p>Charonne</p>
+                </a>
+              </article>
+            </div>
+            <div class="cards__item">
+              <article class="card">
+                <a href="alafrancaise.html" class="card__link">
+                  <img
+                    src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                    alt=""
+                    class="card__image"
+                  />
+                  <div class="card__content">
+                    <h2 class="card__heading">À la française</h2>
+                    <p class="card__text">Cité Rouge</p>
+                    <i class="far fa-heart card__icon"></i>
                   </div>
-                  <div class="card__like">
-                    <i class="far fa-heart"></i>
+                </a>
+              </article>
+            </div>
+            <div class="cards__item">
+              <article class="card">
+                <a href="lapalettedugout.html" class="card__link">
+                  <img
+                    src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                    alt=""
+                    class="card__image"
+                  />
+                  <div class="card__content">
+                    <h2 class="card__heading">Le délice des sens</h2>
+                    <p class="card__text">Folie-Méricourt</p>
+                    <i class="far fa-heart card__icon"></i>
                   </div>
-                </div>
-              </a>
-            </article>
-            <article class="card">
-              <a href="alafrancaise.html" class="link card__link">
-                <img
-                  class="card__image"
-                  src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                  alt="photo d'un plat"
-                />
-                <div class="card__info">
-                  <div class="card__text">
-                    <p>A la française</p>
-                    <p>Cité Rouge</p>
-                  </div>
-                  <div class="card__like">
-                    <i class="far fa-heart"></i>
-                  </div>
-                </div>
-              </a>
-            </article>
-            <article class="card">
-              <a href="ledelicedessens.html" class="link card__link">
-                <img
-                  class="card__image"
-                  src="images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                  alt="photo d'un plat"
-                />
-
-                <div class="card__info">
-                  <div class="card__text">
-                    <p>Le délice des sens</p>
-                    <p>Folie-Méricourt</p>
-                  </div>
-                  <div class="card__like">
-                    <i class="far fa-heart"></i>
-                  </div>
-                </div>
-              </a>
-            </article>
+                </a>
+              </article>
+            </div>
           </div>
         </section>
       </main>
-      <footer>
-        <div class="logo-footer">
-          <p>ohmyfood</p>
+      <footer class="footer">
+        <div class="footer__wrapper">
+          <div class="footer__box">
+            <div class="footer__logo">ohmyfood</div>
+            <div class="footer__content">
+              <div class="submit-restaurant">
+                <i class="fas fa-utensils"></i>
+                <p class="submit-restaurant__text">Proposer un restaurant</p>
+              </div>
+              <div class="partnership">
+                <i class="fas fa-hands-helping"></i>
+                <p class="partnership__text">Devenir partenaire</p>
+              </div>
+              <p class="legal">Mentions légales</p>
+              <a href="mailto:contact@ohmyfood.com" class="contact">Contact</a>
+            </div>
+          </div>
         </div>
-        <div class="suggest-restaurant">
-          <i class="fas fa-utensils"></i>
-          <p>Proposer un restaurant</p>
-        </div>
-        <div class="partnership">
-          <i class="fas fa-hands-helping"></i>
-          <p>Devenir partenaire</p>
-        </div>
-        <p>Mentions légales</p>
-        <a href="mailto:contact@ohmyfood.com">contact</a>
       </footer>
     </div>
   </body>
