realisation de page du' resto 'la palette du gout'

--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <script
       src="https://kit.fontawesome.com/d6d4c9e8be.js"
       crossorigin="anonymous"
@@ -19,97 +19,123 @@
   </head>
   <body>
     <div class="container">
-      <header>
-          <div class="homepage">
-              <a href="index.html">
-                <i class="fas fa-arrow-left"></i>
-              </a>
-          </div>
-       <div class="logo">
-        <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
-       </div>
+      <header class="header header-restaurant">
+        <div>
+          <a href="index.html" class="header-restaurant__homepage">
+            <i class="fas fa-arrow-left"></i>
+          </a>
+        </div>
+        <p class="header-restaurant__logo">ohmyfood</p>
       </header>
-      <main>
-        <div class="main-wrapper">
-          <div class="banner">
+      <main class="main">
+        <div class="main__wrapper">
+          <div class="main__content content">
             <img
               src="images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
               alt="la photo d'un plat"
+              class="banner"
             />
-          </div>
-          <div class="card-menu">
-            <article class="entries">
-              <p>ENTREES</p>
-              <div class="recipe">
-                <p>Fricassée d'escargot</p>
-                <p>Au piment d'Espelette</p>
-                <span>25€</span>
+            <div class="card-menu">
+              <div class="card-menu__restaurant">
+                <p class="card-menu__heading">La palette du goût</p>
+                <i class="far fa-heart card-menu__icon"></i>
               </div>
-              <div class="recipe">
-                <p>Foie gras de canard mi-cuit</p>
-                <p>Et ses copeaux de truffe noire</p>
-                <span>35€</span>
-              </div>
-              <div class="recipe">
-                <p>Oeuf au plat</p>
-                <p>Assaisonné à la truffe sur lit de caviar</p>
-                <span>20€</span>
-              </div>
-            </article>
-            <article class="dishes">
-              <p>PLATS</p>
-              <div class="recipe">
-                <p>Filet de boeuf aux herbes</p>
-                <p>Accompagné de sa ribambelle de légumes</p>
-                <span>40€</span>
-              </div>
-              <div class="recipe">
-                <p>Parmentier de queue de boeuf</p>
-                <p>À la truffe noire sur sa purée de panais</p>
-                <span>35€</span>
-              </div>
-              <div class="recipe">
-                <p>Filet de turbot</p>
-                <p>Aux agrumes</p>
-                <span>44€</span>
-              </div>
-            </article>
-            <article class="desserts">
-              <p>DESSERTS</p>
-              <div class="recipe">
-                <p>Paris-Brest</p>
-                <p>Revisité</p>
-                <span>18€</span>
-              </div>
-              <div class="recipe">
-                <p>Macaron au chocolat d'exception</p>
-                <p>Et glace à la vanille de Madagascar</p>
-                <span>22€</span>
-              </div>
-              <div class="recipe">
-                <p>Mousse au chocolat</p>
-                <p>Au piment d'Espelette et à la truffe noire</p>
-                <span>23€</span>
-              </div>
-            </article>
-            <button>commander</button>
+              <article class="card-menu__entries">
+                <p class="card-menu__text">ENTREES</p>
+                <div class="card-menu__recipe">
+                  <p class="card-menu__recipe-heading">Fricassée d'escargot</p>
+                  <div class="card-menu__recipe-price">
+                    <p class="card-menu__recipe-text">Au piment d'espelette</p>
+                    <span class="card-menu__price">25€</span>
+                  </div>
+                </div>
+                <div class="card-menu__recipe">
+                  <p class="card-menu__recipe-heading">Foie gras de canard mi-cuit</p>
+                  <div class="card-menu__recipe-price">
+                    <p class="card-menu__recipe-text">Et ses copeaux de truffe noire</p>
+                    <span class="card-menu__price">35€</span>
+                  </div>
+                </div>
+                <div class="card-menu__recipe">
+                  <p class="card-menu__recipe-heading">Oeuf au plat</p>
+                  <div class="card-menu__recipe-price">
+                    <p class="card-menu__recipe-text">Assaisonné à la truffe sur lit de caviar</p>
+                    <span class="card-menu__price">20€</span>
+                  </div>
+                </div>
+              </article>
+              <article class="card-menu__entries">
+                <p class="card-menu__text">PLATS</p>
+                <div class="card-menu__recipe">
+                  <p class="card-menu__recipe-heading">Filet de boeuf aux herbes</p>
+                  <div class="card-menu__recipe-price">
+                    <p class="card-menu__recipe-text">Accompagné de sa ribambelle de légumes</p>
+                    <span class="card-menu__price">40€</span>
+                  </div>
+                </div>
+                <div class="card-menu__recipe">
+                  <p class="card-menu__recipe-heading">Parmentier de queue de boeuf</p>
+                  <div class="card-menu__recipe-price">
+                    <p class="card-menu__recipe-text">À la truffe noire sur sa purée de panais</p>
+                    <span class="card-menu__price">35€</span>
+                  </div>
+                </div>
+                <div class="card-menu__recipe">
+                  <p class="card-menu__recipe-heading">Filet de turbot</p>
+                  <div class="card-menu__recipe-price">
+                    <p class="card-menu__recipe-text">Aux agrumes</p>
+                    <span class="card-menu__price">44€</span>
+                  </div>
+                </div>
+              </article>
+              <article class="card-menu__entries">
+                <p class="card-menu__text">DESSERTS</p>
+                <div class="card-menu__recipe">
+                  <p class="card-menu__recipe-heading">Paris-Brest</p>
+                  <div class="card-menu__recipe-price">
+                    <p class="card-menu__recipe-text">Revisité</p>
+                    <span class="card-menu__price">18€</span>
+                  </div>
+                </div>
+                <div class="card-menu__recipe">
+                  <p class="card-menu__recipe-heading">Macaron au chocolat d'exception</p>
+                  <div class="card-menu__recipe-price">
+                    <p class="card-menu__recipe-text">Et glace à la vanille de Madagascar</p>
+                    <span class="card-menu__price">22€</span>
+                  </div>
+                </div>
+                <div class="card-menu__recipe">
+                  <p class="card-menu__recipe-heading">Mousse au chocolat </p>
+                  <div class="card-menu__recipe-price">
+                    <p class="card-menu__recipe-text">Au piment d'Espelette et à la truffe noire</p>
+                    <span class="card-menu__price">23€</span>
+                  </div>
+                </div>
+              </article>
+             
+              <button class="add-cart">commander</button>
+            </div>
           </div>
         </div>
       </main>
-      <footer>
-        <div class="logo-footer">
-          <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
+      <footer class="footer">
+        <div class="footer__wrapper">
+          <div class="footer__box">
+            <div class="footer__logo">ohmyfood</div>
+            <div class="footer__content">
+              <div class="submit-restaurant">
+                <i class="fas fa-utensils"></i>
+                <p class="submit-restaurant__text">Proposer un restaurant</p>
+              </div>
+              <div class="partnership">
+                <i class="fas fa-hands-helping"></i>
+                <p class="partnership__text">Devenir partenaire</p>
+              </div>
+              <p class="legal">Mentions légales</p>
+              <a href="mailto:contact@ohmyfood.com" class="contact">Contact</a>
+            </div>
+          </div>
         </div>
-        <div class="suggest-restaurant">
-          <i class="fas fa-utensils"></i>
-          <p>Proposer un restaurant</p>
-        </div>
-        <div class="partnership">
-        <i class="fas fa-hands-helping"></i>
-          <p>Devenir partenaire</p>
-        </div>
-        <p>Mentions légales</p>
-        <a href="mailto:contact@ohmyfood.com">contact</a>
       </footer>
     </div>
   </body>
