--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 Découvrez des restaurants d'exception, sélectionnés par nos
                 soins.
               </p>
-              <button class="search__button">Explorez nos restaurants</button>
+              <button class="search__button add-cart">Explorez nos restaurants</button>
             </div>
           </div>
         </section>
