ajournement de la page d'acceuil, rendu responsive.

--- a/index.html
+++ b/index.html
@@ -18,32 +18,27 @@
     <title>Ohmyfood</title>
   </head>
   <body>
-    <div class="container">
+    <div class="container red-b">
       <header class="header">
         <p>ohmyfood</p>
       </header>
       <main class="main">
         <section class="booking">
           <div class="booking booking--dark">
-            <div class="booking__map">
-              <div class="map">
-                <i class="fas fa-map-marker-alt map__icon"></i>
-                <p class="map__text">Paris, Belleville</p>
-              </div>
+            <div class="map red-b">
+              <i class="fas fa-map-marker-alt map__icon"></i>
+              <p class="map__text">Paris, Belleville</p>
             </div>
           </div>
 
-          <div class="booking__search">
-            <div class="search">
-              <h1 class="search__heading">
-                Réservez le menu qui vous convient
-              </h1>
-              <p class="search__text">
-                Découvrez des restaurants d'exception, sélectionnés par nos
-                soins.
-              </p>
-              <button class="search__button add-cart">Explorez nos restaurants</button>
-            </div>
+          <div class="search">
+            <h1 class="search__heading">Réservez le menu qui vous convient</h1>
+            <p class="search__text">
+              Découvrez des restaurants d'exception, sélectionnés par nos soins.
+            </p>
+            <button class="search__button add-cart">
+              Explorez nos restaurants
+            </button>
           </div>
         </section>
         <section class="check-in">
@@ -65,8 +60,8 @@
           </div>
         </section>
         <section class="restaurant">
+          <h1 class="restaurant__heading">Restaurants</h1>
           <div class="cards">
-            <h1 class="cards__heading">Restaurants</h1>
             <div class="cards__item">
               <article class="card">
                 <a href="lapalettedugout.html" class="card__link">
@@ -135,23 +130,21 @@
         </section>
       </main>
       <footer class="footer">
-        <div class="footer__wrapper">
-          <div class="footer__box">
-            <div class="footer__logo">ohmyfood</div>
-            <div class="footer__content">
-              <div class="submit-restaurant">
-                <i class="fas fa-utensils"></i>
-                <p class="submit-restaurant__text">Proposer un restaurant</p>
-              </div>
-              <div class="partnership">
-                <i class="fas fa-hands-helping"></i>
-                <p class="partnership__text">Devenir partenaire</p>
-              </div>
-              <p class="legal">Mentions légales</p>
-              <a href="mailto:contact@ohmyfood.com" class="contact">Contact</a>
+       
+          <div class="footer__logo">ohmyfood</div>
+          <div class="footer__content">
+            <div class="submit-restaurant">
+              <i class="fas fa-utensils footer__icon"></i>
+              <p class="submit-restaurant__text">Proposer un restaurant</p>
             </div>
+            <div class="partnership">
+              <i class="fas fa-hands-helping footer__icon"></i>
+              <p class="partnership__text">Devenir partenaire</p>
+            </div>
+            <p class="legal">Mentions légales</p>
+            <a href="mailto:contact@ohmyfood.com" class="contact">Contact</a>
           </div>
-        </div>
+       
       </footer>
     </div>
   </body>
