--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <title>Ohmyfood</title>
   </head>
   <body>
-    <div class="container red-b">
+    <div class="container ">
       <header class="header">
         <p>ohmyfood</p>
       </header>
