--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <main class="main">
         <section class="booking">
           <div class="booking booking--dark">
-            <div class="map red-b">
+            <div class="map ">
               <i class="fas fa-map-marker-alt map__icon"></i>
               <p class="map__text">Paris, Belleville</p>
             </div>
