--- a/index.html
+++ b/index.html
@@ -37,31 +37,36 @@
               </div>
             </div>
             <div class="search">
-              <h1 class="search__heading">Réservez le menu qui vous convient</h1>
+              <h1 class="search__heading">
+                Réservez le menu qui vous convient
+              </h1>
               <p class="search__text">
-                Découvrez des restaurants d'exception, sélectionnés par nos soins.
+                Découvrez des restaurants d'exception, sélectionnés par nos
+                soins.
               </p>
               <button class="search__button add-cart">
                 Explorez nos restaurants
               </button>
             </div>
           </section>
-          <section class="check-in">
-            <h1 class="check-in__heading">Fonctionnement</h1>
-            <div class="check-in__box">
-              <span class="check-in__order">1</span>
-              <i class="fas fa-mobile-alt check-in__icon"></i>
-              <p class="check-in__text">Choisissez un restaurant</p>
-            </div>
-            <div class="check-in__box">
-              <span class="check-in__order">2</span>
-              <i class="fas fa-list-ul check-in__icon"></i>
-              <p class="check-in__text">Composez votre menu</p>
-            </div>
-            <div class="check-in__box">
-              <span class="check-in__order">3</span>
-              <i class="fas fa-store check-in__icon"></i>
-              <p class="check-in__text">Dégustez au restaurant</p>
+          <section class="check">
+            <h1 class="check__heading">Fonctionnement</h1>
+            <div class="check__box-wrapper">
+              <div class="check__box">
+                <span class="check__order">1</span>
+                <i class="fas fa-mobile-alt check__icon"></i>
+                <p class="check__text">Choisissez un restaurant</p>
+              </div>
+              <div class="check__box">
+                <span class="check__order">2</span>
+                <i class="fas fa-list-ul check__icon"></i>
+                <p class="check__text">Composez votre menu</p>
+              </div>
+              <div class="check__box">
+                <span class="check__order">3</span>
+                <i class="fas fa-store check__icon"></i>
+                <p class="check__text">Dégustez au restaurant</p>
+              </div>
             </div>
           </section>
           <section class="restaurant">
@@ -69,16 +74,17 @@
             <div class="cards">
               <div class="cards__item">
                 <article class="card">
-                  <a href="lapalettedugout.html" class="card__link">
+                  <a href="./lapalettedugout.html" class="card__link">
                     <img
-                      src="./images/restaurants/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                      src="./images/restaurants/palette.jpg"
                       alt=""
                       class="card__image"
                     />
                     <div class="card__content">
                       <h2 class="card__heading">La palette du goût</h2>
                       <p class="card__text">Ménilmontant</p>
-                      <i class="far fa-heart card__icon"></i>
+                      <i class="far fa-heart card__icon card__icon-1"></i>
+                      <i class="fas fa-heart card__icon heart-icon" ></i>
                     </div>
                     <div class="card__new-box">
                       <p class="card__new">Nouveau</p>
@@ -88,16 +94,17 @@
               </div>
               <div class="cards__item">
                 <article class="card">
-                  <a href="lanoteenchantee.html" class="card__link">
+                  <a href="./lanoteenchantee.html" class="card__link">
                     <img
-                      src="./images/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg"
+                      src="./images/restaurants/note.jpg"
                       alt=""
                       class="card__image"
                     />
                     <div class="card__content">
                       <h2 class="card__heading">La note enchantée</h2>
                       <p class="card__text">Charonne</p>
-                      <i class="far fa-heart card__icon"></i>
+                      <i class="far fa-heart card__icon card__icon-1"></i>
+                      <i class="fas fa-heart card__icon heart-icon></i>
                     </div>
                     <div class="card__new-box">
                       <p class="card__new">Nouveau</p>
@@ -109,14 +116,15 @@
                 <article class="card">
                   <a href="alafrancaise.html" class="card__link">
                     <img
-                      src="./images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                      src="./images/restaurants/francaise.jpg"
                       alt=""
                       class="card__image"
                     />
                     <div class="card__content">
                       <h2 class="card__heading">À la française</h2>
                       <p class="card__text">Cité Rouge</p>
-                      <i class="far fa-heart card__icon"></i>
+                      <i class="far fa-heart card__icon card__icon-1"></i>
+                      <i class="fas fa-heart card__icon heart-icon></i>
                     </div>
                   </a>
                 </article>
@@ -125,14 +133,15 @@
                 <article class="card">
                   <a href="lapalettedugout.html" class="card__link">
                     <img
-                      src="./images/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                      src="./images/restaurants/delice.jpg"
                       alt=""
                       class="card__image"
                     />
                     <div class="card__content">
                       <h2 class="card__heading">Le délice des sens</h2>
                       <p class="card__text">Folie-Méricourt</p>
-                      <i class="far fa-heart card__icon"></i>
+                      <i class="far fa-heart card__icon card__icon-1"></i>
+                      <i class="fas fa-heart card__icon heart-icon></i>
                     </div>
                   </a>
                 </article>
@@ -155,7 +164,7 @@
             <a href="mailto:contact@ohmyfood.com" class="contact">Contact</a>
           </div>
         </footer>
-            </div>
       </div>
+    </div>
   </body>
 </html>
