correction de toutes les pages et realisation des animations.

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
                     <div class="card__content">
                       <h2 class="card__heading">La palette du goût</h2>
                       <p class="card__text">Ménilmontant</p>
-                      <i class="far fa-heart card__icon card__icon-1"></i>
-                      <i class="fas fa-heart card__icon heart-icon" ></i>
+                      <i class="far fa-heart heart-icon "></i>
+                      <i class="fas fa-heart heart-icon heart-icon-1"></i>
                     </div>
                     <div class="card__new-box">
                       <p class="card__new">Nouveau</p>
@@ -103,8 +103,8 @@
                     <div class="card__content">
                       <h2 class="card__heading">La note enchantée</h2>
                       <p class="card__text">Charonne</p>
-                      <i class="far fa-heart card__icon card__icon-1"></i>
-                      <i class="fas fa-heart card__icon heart-icon></i>
+                      <i class="far fa-heart heart-icon "></i>
+                      <i class="fas fa-heart heart-icon heart-icon-1"></i>
                     </div>
                     <div class="card__new-box">
                       <p class="card__new">Nouveau</p>
@@ -114,7 +114,7 @@
               </div>
               <div class="cards__item">
                 <article class="card">
-                  <a href="alafrancaise.html" class="card__link">
+                  <a href="./alafrancaise.html" class="card__link">
                     <img
                       src="./images/restaurants/francaise.jpg"
                       alt=""
@@ -123,15 +123,15 @@
                     <div class="card__content">
                       <h2 class="card__heading">À la française</h2>
                       <p class="card__text">Cité Rouge</p>
-                      <i class="far fa-heart card__icon card__icon-1"></i>
-                      <i class="fas fa-heart card__icon heart-icon></i>
+                      <i class="far fa-heart heart-icon "></i>
+                      <i class="fas fa-heart heart-icon heart-icon-1"></i>
                     </div>
                   </a>
                 </article>
               </div>
               <div class="cards__item">
                 <article class="card">
-                  <a href="lapalettedugout.html" class="card__link">
+                  <a href="./ledelicedessens.html" class="card__link">
                     <img
                       src="./images/restaurants/delice.jpg"
                       alt=""
@@ -140,8 +140,8 @@
                     <div class="card__content">
                       <h2 class="card__heading">Le délice des sens</h2>
                       <p class="card__text">Folie-Méricourt</p>
-                      <i class="far fa-heart card__icon card__icon-1"></i>
-                      <i class="fas fa-heart card__icon heart-icon></i>
+                      <i class="far fa-heart heart-icon "></i>
+                      <i class="fas fa-heart heart-icon heart-icon-1"></i>
                     </div>
                   </a>
                 </article>
