--- a/alafrancaise.html
+++ b/alafrancaise.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto&family=Shrikhand&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="css/styles.css" />
     <script
       src="https://kit.fontawesome.com/d6d4c9e8be.js"
       crossorigin="anonymous"
@@ -18,98 +18,152 @@
     <title>A la française</title>
   </head>
   <body>
-    <div class="container">
-      <header>
-        <div class="homepage">
-          <a href="index.html">
+    <div class="container ">
+      <header class="header header-restaurant ">
+        <div class="header-restaurant__arrow ">
+          <a href="index.html" class="header-restaurant__arrow " >
             <i class="fas fa-arrow-left"></i>
           </a>
         </div>
-        <div class="logo">
-          <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
-        </div>
+
+        <p class="header-restaurant__logo">ohmyfood</p>
       </header>
-      <main>
-        <div class="main-wrapper">
-          <div class="banner">
-            <img
-              src="images/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-              alt="la photo d'un plat"
-            />
-          </div>
-          <div class="card-menu">
-            <article class="entries">
-              <p>ENTREES</p>
-              <div class="recipe">
-                <p>Tartare de poulpe acidulé</p>
-                <p>Aux zestes d'orange</p>
-                <span>25€</span>
+      <main class="main">
+        <div class="main__wrapper">
+     
+            <div class="banner">
+              <img
+                src="images/restaurants/palette.jpg"
+                alt="la photo d'un plat"
+              class="banner__image"
+              />
+            </div>
+            <div class="card-menu ">
+              <div class="card-menu__restaurant  ">
+                <p class="card-menu__heading">A la francaise</p>
+                <div class="card-menu__icons">
+                  <i class="far fa-heart heart-icon  card-menu__icon"></i>
+                  <i class="fas fa-heart heart-icon heart-icon-1 card-menu__icon"></i>
+                </div>
               </div>
-              <div class="recipe">
-                <p>Velouté de légumes d'antan</p>
-                <p>Carotte, panais, topinambour</p>
-                <span>35€</span>
-              </div>
-              <div class="recipe">
-                <p>Soupe à l'oignon</p>
-                <p>Revisitée</p>
-                <span>20€</span>
-              </div>
-            </article>
-            <article class="dishes">
-              <p>PLATS</p>
-              <div class="recipe">
-                <p>Coquilles Saint-Jacques</p>
-                <p>Accompagnées d'une purée de panais</p>
-                <span>40€</span>
-              </div>
-              <div class="recipe">
-                <p>Magret de canard</p>
-                <p>Et parmentier de pommes de terre</p>
-                <span>35€</span>
-              </div>
-              <div class="recipe">
-                <p>Pigeonneau d’Ille-et-Vilaine</p>
-                <p>Sur son lit de gnocchis aux légumes</p>
-                <span>44€</span>
-              </div>
-            </article>
-            <article class="desserts">
-              <p>DESSERTS</p>
-              <div class="recipe">
-                <p>Pétales de violettes glacés</p>
-                <p>Et purée de noisettes</p>
-                <span>18€</span>
-              </div>
-              <div class="recipe">
-                <p>Fondant au chocolat</p>
-                <p>Revisité</p>
-                <span>22€</span>
-              </div>
-              <div class="recipe">
-                <p>Millefeuille croustillant</p>
-                <p>Myrtilles et pâte d’amande</p>
-                <span>23€</span>
-              </div>
-            </article>
-            <button>commander</button>
-          </div>
+              <article class="card-menu__dishes">
+                <p class="card-menu__text">ENTREES</p>
+                <div class="card-menu__recipe recipe">
+                  <div class="recipe__wrapper ">
+                    <h2 class="card-menu__recipe-heading">Tartare de poulpe acidulé</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Aux zestes d'orange</p>
+                      <span class="card-menu__price">25€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+                <div class="card-menu__recipe recipe">
+                  <div class="recipe__wrapper ">
+                    <h2 class="card-menu__recipe-heading">Velouté de légumes d'antan</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Carotte, panais, topinambour</p>
+                      <span class="card-menu__price">35€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+                <div class="card-menu__recipe recipe">
+                  <div class="recipe__wrapper ">
+                    <h2 class= "card-menu__recipe-heading">Soupe à l'oignon</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Revisitée</p>
+                      <span class="card-menu__price">20€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+              </article>
+              <article class="card-menu__dishes">
+                <p class="card-menu__text">PLATS</p>
+                <div class="card-menu__recipe recipe ">
+                  <div class="recipe__wrapper ">
+                    <h2 class="card-menu__recipe-heading">Coquilles Saint-Jacques</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Accompagnées d'une purée de panais</p>
+                      <span class="card-menu__price">40€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+                <div class="card-menu__recipe recipe">
+                  <div class="recipe__wrapper ">
+                    <h2 class="card-menu__recipe-heading">Magret de canard</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Et parmentier de pommes de terre</p>
+                      <span class="card-menu__price">35€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+                <div class="card-menu__recipe recipe">
+                  <div class="recipe__wrapper ">
+                    <h2 class="card-menu__recipe-heading">Pigeonneau d’Ille-et-Vilaine</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Sur son lit de gnocchis aux légumes</p>
+                      <span class="card-menu__price">44€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+              </article>
+              <article class="card-menu__dishes">
+                <p class="card-menu__text">DESSERTS</p>
+                <div class="card-menu__recipe recipe ">
+                  <div class="recipe__wrapper ">
+                    <h2 class="card-menu__recipe-heading">Pétales de violettes glacés</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Et purée de noisettes</p>
+                      <span class="card-menu__price">18€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+                <div class="card-menu__recipe recipe ">
+                  <div class="recipe__wrapper ">
+                    <h2 class="card-menu__recipe-heading">Fondant au chocolat</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Revisité</p>
+                      <span class="card-menu__price">22€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+                <div class="card-menu__recipe recipe ">
+                  <div class="recipe__wrapper ">
+                    <h2 class="card-menu__recipe-heading">Millefeuille croustillant</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Myrtilles et pâte d’amande</p>
+                      <span class="card-menu__price">23€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+              </article>
+              <button class="add-cart">Commander</button>
+            </div>
+          
         </div>
       </main>
-      <footer>
-        <div class="logo-footer">
-          <img src="images/logo/ohmyfood@2x.svg" alt="logo ohmyfood" />
+      <footer class="footer">
+        <div class="footer__logo">ohmyfood</div>
+        <div class="footer__content">
+          <div class="submit-restaurant">
+            <i class="fas fa-utensils footer__icon"></i>
+            <p class="submit-restaurant__text">Proposer un restaurant</p>
+          </div>
+          <div class="partnership">
+            <i class="fas fa-hands-helping footer__icon"></i>
+            <p class="partnership__text">Devenir partenaire</p>
+          </div>
+          <p class="legal">Mentions légales</p>
+          <a href="mailto:contact@ohmyfood.com" class="contact">Contact</a>
         </div>
-        <div class="suggest-restaurant">
-          <i class="fas fa-utensils"></i>
-          <p>Proposer un restaurant</p>
-        </div>
-        <div class="partnership">
-          <i class="fas fa-hands-helping"></i>
-          <p>Devenir partenaire</p>
-        </div>
-        <p>Mentions légales</p>
-        <a href="mailto:contact@ohmyfood.com">contact</a>
       </footer>
     </div>
   </body>
