--- a/lapalettedugout.html
+++ b/lapalettedugout.html
@@ -39,27 +39,113 @@
               />
             </div>
             <div class="card-menu ">
-              <div class="card-menu__restaurant ">
+              <div class="card-menu__restaurant  ">
                 <p class="card-menu__heading">La palette du goût</p>
                 <div class="card-menu__icons">
-                  <i class="far fa-heart card-menu__icon card-menu__icon-1"></i>
-                  <i class="far fa-heart  card-menu__icon card-menu__icon-2"></i>
+                  <i class="far fa-heart heart-icon  card-menu__icon"></i>
+                  <i class="fas fa-heart heart-icon heart-icon-1 card-menu__icon"></i>
                 </div>
               </div>
-              <article class="card-menu__entries">
+              <article class="card-menu__dishes">
                 <p class="card-menu__text">ENTREES</p>
-                <div class="card-menu__recipe recipe red-b">
+                <div class="card-menu__recipe recipe">
                   <div class="recipe__wrapper ">
-                    <p class="card-menu__recipe-heading">Fricassée d'escargot</p>
+                    <h2 class="card-menu__recipe-heading">Fricassée d'escargot</h2>
                     <div class="card-menu__recipe-price">
                       <p class="card-menu__recipe-text">Au piment d'espelette</p>
                       <span class="card-menu__price">25€</span>
                     </div>
                   </div>
-                  <i class="fas fa-check-circle recipe__selected "></i>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+                <div class="card-menu__recipe recipe">
+                  <div class="recipe__wrapper ">
+                    <h2 class="card-menu__recipe-heading">Foie gras de canard mi-cuit</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Et ses copeaux de truffe noire</p>
+                      <span class="card-menu__price">35€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+                <div class="card-menu__recipe recipe">
+                  <div class="recipe__wrapper ">
+                    <h2 class= "card-menu__recipe-heading">Oeuf au plat</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Assaisonné à la truffe sur lit de caviar</p>
+                      <span class="card-menu__price">20€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
                 </div>
               </article>
-              <button class="add-cart">commander</button>
+              <article class="card-menu__dishes">
+                <p class="card-menu__text">PLATS</p>
+                <div class="card-menu__recipe recipe ">
+                  <div class="recipe__wrapper ">
+                    <h2 class="card-menu__recipe-heading">Filet de boeuf aux herbes</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Accompagné de sa ribambelle de légumes</p>
+                      <span class="card-menu__price">40€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+                <div class="card-menu__recipe recipe">
+                  <div class="recipe__wrapper ">
+                    <h2 class="card-menu__recipe-heading">Parmentier de queue de boeuf</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">À la truffe noire sur sa purée de panais</p>
+                      <span class="card-menu__price">35€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+                <div class="card-menu__recipe recipe">
+                  <div class="recipe__wrapper ">
+                    <h2 class="card-menu__recipe-heading">Filet de turbot</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Aux agrumes</p>
+                      <span class="card-menu__price">44€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+              </article>
+              <article class="card-menu__dishes">
+                <p class="card-menu__text">DESSERTS</p>
+                <div class="card-menu__recipe recipe ">
+                  <div class="recipe__wrapper ">
+                    <h2 class="card-menu__recipe-heading">Paris-Brest</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Revisité</p>
+                      <span class="card-menu__price">18€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+                <div class="card-menu__recipe recipe ">
+                  <div class="recipe__wrapper ">
+                    <h2 class="card-menu__recipe-heading">Macaron au chocolat d'exception</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Et glace à la vanille de Madagascar</p>
+                      <span class="card-menu__price">22€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+                <div class="card-menu__recipe recipe ">
+                  <div class="recipe__wrapper ">
+                    <h2 class="card-menu__recipe-heading">Mousse au chocolat</h2>
+                    <div class="card-menu__recipe-price">
+                      <p class="card-menu__recipe-text">Au piment d'Espelette et à la truffe noire</p>
+                      <span class="card-menu__price">23€</span>
+                    </div>
+                  </div>
+                  <div class="recipe__selected"><i class="fas fa-check-circle selected"></i></div>
+                </div>
+              </article>
+              <button class="add-cart">Commander</button>
             </div>
           
         </div>
